JWT y logica de compra